# build123d_portfolio

./: .gitignore  README.md  main.py  pyproject.toml
src/build123d_portfolio/: __init__.py  jupyter_lab_config.py
src/build123d_portfolio/notebooks/: bookmark.ipynb  brush_clip.ipynb  column_supports.ipynb  cylinder_cap.ipynb  fastener.ipynb  lockbox.ipynb  modular_mount.ipynb  stake.ipynb  tablet_case.ipynb  tablet_clamp.ipynb  text_keychain.ipynb
src/build123d_portfolio/templates/build123d/: basic_template.ipynb
