[project]
name = "build123d-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build123d>=0.9.1",
    "components",
    "utilities",
    "projects",
    "features"
]

[dependency-groups]
dev = [
    "cad-viewer-widget>=3.0.2",
    "jupyter-cadquery>=4.0.2",
    "jupyterlab>=4.4.9",
    "jupyterlab-templates>=0.5.3",
    "jupyterlab-unfold>=0.3.4",
]

[tool.uv.sources]
components = {workspace = true}
utilities = {workspace = true}
features = {workspace = true}
projects = {workspace = true}

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
experiments = "build123d_portfolio:run"
